Add rosette information to the board shapes